Don't update the profile chooser if it's to be closed.

Unnecessary update skews the metrics. Typical flow before the CL is
- The profile chooser shown.
- User clicks something.
- The profile chooser is being hidden.
- Some state changes and updates still existing bubble.

Bug: 901449
Change-Id: Iee9b5c7757aad2f0d9c7149a1e26b33e6e954716
Reviewed-on: https://chromium-review.googlesource.com/c/1320172
Reviewed-by: Bret Sepulveda <bsep@chromium.org>
Commit-Queue: Vasilii Sukhanov <vasilii@chromium.org>
Cr-Commit-Position: refs/heads/master@{#606412}
Former-commit-id: 00a0e731b795e35a50ae475ec5ba2a838211ed74