chrome/browser/ui/views/profiles/profile_chooser_view_browsertest.cc
@@ -14,6 +14,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "base/run_loop.h"
 #include "base/strings/utf_string_conversions.h"
 #include "base/test/metrics/histogram_tester.h"
+#include "base/test/metrics/user_action_tester.h"
 #include "base/threading/thread_restrictions.h"
 #include "build/build_config.h"
 #include "chrome/browser/browser_process.h"
@@ -222,7 +223,7 @@ class ProfileChooserViewExtensionsTest
     return ProfileChooserView::profile_bubble_;
   }
 
-  views::View* signin_current_profile_button() {
+  views::LabelButton* signin_current_profile_button() {
     return ProfileChooserView::profile_bubble_->signin_current_profile_button_;
   }
 
@@ -247,6 +248,17 @@ IN_PROC_BROWSER_TEST_F(ProfileChooserViewExtensionsTest,
   ASSERT_NO_FATAL_FAILURE(OpenProfileChooserView(browser()));
 
   EXPECT_TRUE(signin_current_profile_button()->HasFocus());
+}
+
+IN_PROC_BROWSER_TEST_F(ProfileChooserViewExtensionsTest, ClickSigninButton) {
+  ASSERT_NO_FATAL_FAILURE(OpenProfileChooserView(browser()));
+
+  views::ButtonListener* bubble = current_profile_bubble();
+  const ui::MouseEvent event(ui::ET_MOUSE_PRESSED, gfx::Point(), gfx::Point(),
+                             ui::EventTimeForNow(), 0, 0);
+  base::UserActionTester tester;
+  bubble->ButtonPressed(signin_current_profile_button(), event);
+  EXPECT_EQ(1, tester.GetActionCount("Signin_Signin_FromAvatarBubbleSignin"));
 }
 
 // Make sure nothing bad happens when the browser theme changes while the
